# rfloat

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  benchmarking_rfloat.csv
.github/workflows/: ci.yaml  emulated_platforms.yaml  random_compiler_options.yaml
headers/: rcmath.hh  reproducible_float.hh  rfloat.hh
headers/rfloat/: rcmath  rcmath.hh  rfloat  rfloat.hh
src/: bare_metal_reproducibility_tests.cpp  compiler_bug_tests.cpp  compiler_test.cpp  cpp_examples.cpp  gen_repro_tests.cpp  gen_repro_tests.hh  gen_test_data.cpp  pregel_tests.cpp  rcmath_tests.cpp  rcmath_tests.hh  reproducibility_tests.cpp  reproducibility_tests.hh  reproducible_float_tests.cpp  rfloat_tests.cpp  testfile_loader.hh
src/benchmarks/: CMakeLists.txt  linpack.cpp  whetstone.cpp
src/testdata/: doubleNum_testdata.hh  random_abs_testdata.hh  random_acos_testdata.hh  random_acosh_testdata.hh  random_asin_testdata.hh  random_asinh_testdata.hh  random_atan2_testdata.hh  random_atan_testdata.hh  random_atanh_testdata.hh  random_cbrt_testdata.hh  random_ceil_testdata.hh  random_cos_testdata.hh  random_cosh_testdata.hh  random_erf_testdata.hh  random_erfc_testdata.hh  random_exp2_testdata.hh  random_exp_testdata.hh  random_expm1_testdata.hh  random_fdim_testdata.hh  random_floor_testdata.hh  random_fma_testdata.hh  random_fmax_testdata.hh  random_fmin_testdata.hh  random_fmod_testdata.hh  random_hypot_testdata.hh  random_iostream_large_testdata.hh  random_iostream_medium_testdata.hh  random_iostream_small_testdata.hh  random_isgreater_testdata.hh  random_isgreaterequal_testdata.hh  random_isless_testdata.hh  random_islessequal_testdata.hh  random_islessgreater_testdata.hh  random_lerp_testdata.hh  random_lgamma_testdata.hh  random_log10_testdata.hh  random_log1p_testdata.hh  random_log2_testdata.hh  random_log_testdata.hh  random_logistic_map_testdata.hh  (+17 more)
